# Algorithms

./: .travis.yml  CMakeLists.txt  README.md  version.h.in
Tests/: CMakeLists.txt  SortingTests.cpp
include/Sorting/: CMakeLists.txt  Sorting.h  SortingAlgorithms.h  main.cpp
